--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -7,5 +7,7 @@
         "/home/yyh/ros2_ws/install/realsense2_camera_msgs/lib/python3.8/site-packages",
         "/opt/ros/foxy/lib/python3.8/site-packages"
     ],
-    "ros.distro": "foxy"
+    "ros.distro": "foxy",
+    "cmake.sourceDirectory": "/home/yyh/ros2_ws/FLY/src/learning_interface",
+   
 }
